// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots RoundedButton with some emoji 1`] = `
Array [
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "2",
          "padding": "0px 5px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingBottom": 0,
            "paddingTop": 0,
          }
        }
      >
        <h1
          style={
            Object {
              "display": "inline",
              "fontSize": "25px",
              "margin": 0,
              "marginRight": "20px",
              "padding": 0,
            }
          }
        >
          RoundedButton
        </h1>
        <h2
          style={
            Object {
              "color": "#999",
              "display": "inline",
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with some emoji
        </h2>
      </div>
    </div>
  </div>,
  <div
    id="story-root"
    style={Object {}}
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "papayawhip",
          "border": "none",
          "borderRadius": 5,
          "color": "white",
          "display": "inline-block",
          "fontSize": "16px",
          "margin": "4px 2px",
          "padding": 20,
          "textAlign": "center",
          "textDecoration": "none",
        }
      }
    >
      <span
        aria-label="so cool"
        role="img"
      >
        😀 😎 👍 💯
      </span>
    </button>
  </div>,
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "2",
          "padding": "0px 5px",
        }
      }
    >
      <p>
        RoundButton with emojies
      </p>
      <div
        className="css-1fhpnuv"
      >
        <div
          className="css-1si67pu"
          data-simplebar={true}
        >
          <div
            className="simplebar-wrapper"
          >
            <div
              className="simplebar-height-auto-observer-wrapper"
            >
              <div
                className="simplebar-height-auto-observer"
              />
            </div>
            <div
              className="simplebar-mask"
            >
              <div
                className="simplebar-offset"
              >
                <div
                  className="simplebar-content-wrapper"
                  tabIndex={0}
                >
                  <div
                    className="simplebar-content"
                  >
                    <pre
                      className="hljs css-4zr3vl"
                    >
                      <code
                        className="css-1maezg8"
                      >
                        <span
                          className="token operator"
                        >
                          &lt;
                        </span>
                        <span
                          className="token maybe-class-name"
                        >
                          RoundedButton
                        </span>
                         color
                        <span
                          className="token operator"
                        >
                          =
                        </span>
                        <span
                          className="token string"
                        >
                          "papayawhip"
                        </span>
                         onClick
                        <span
                          className="token operator"
                        >
                          =
                        </span>
                        <span
                          className="token punctuation"
                        >
                          {
                        </span>
                        <span
                          className="token function"
                        >
                          action
                        </span>
                        <span
                          className="token punctuation"
                        >
                          (
                        </span>
                        <span
                          className="token string"
                        >
                          'clicked'
                        </span>
                        <span
                          className="token punctuation"
                        >
                          )
                        </span>
                        <span
                          className="token punctuation"
                        >
                          }
                        </span>
                        <span
                          className="token operator"
                        >
                          &gt;
                        </span>
                        

                        <span
                          className="token operator"
                        >
                          &lt;
                        </span>
                        span role
                        <span
                          className="token operator"
                        >
                          =
                        </span>
                        <span
                          className="token string"
                        >
                          "img"
                        </span>
                         aria
                        <span
                          className="token operator"
                        >
                          -
                        </span>
                        label
                        <span
                          className="token operator"
                        >
                          =
                        </span>
                        <span
                          className="token string"
                        >
                          "so cool"
                        </span>
                        <span
                          className="token operator"
                        >
                          &gt;
                        </span>
                        
  😀 😎 👍 💯

                        <span
                          className="token operator"
                        >
                          &lt;
                        </span>
                        <span
                          className="token operator"
                        >
                          /
                        </span>
                        span
                        <span
                          className="token operator"
                        >
                          &gt;
                        </span>
                        

                        <span
                          className="token operator"
                        >
                          &lt;
                        </span>
                        <span
                          className="token operator"
                        >
                          /
                        </span>
                        <span
                          className="token maybe-class-name"
                        >
                          RoundedButton
                        </span>
                        <span
                          className="token operator"
                        >
                          &gt;
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="simplebar-placeholder"
            />
          </div>
          <div
            className="simplebar-track simplebar-horizontal"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
          <div
            className="simplebar-track simplebar-vertical"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          className="css-11xgcgt"
        >
          <button
            className="css-1imo1gr"
            onClick={[Function]}
          >
            Copy
          </button>
        </div>
      </div>
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Prop Types
      </h1>
      <div>
        <h3
          style={
            Object {
              "margin": "20px 0 0 0",
            }
          }
        >
          "
          RoundedButton
          " Component
        </h3>
        <small>
          No propTypes defined!
        </small>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots RoundedButton with text 1`] = `
Array [
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "2",
          "padding": "0px 5px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingBottom": 0,
            "paddingTop": 0,
          }
        }
      >
        <h1
          style={
            Object {
              "display": "inline",
              "fontSize": "25px",
              "margin": 0,
              "marginRight": "20px",
              "padding": 0,
            }
          }
        >
          RoundedButton
        </h1>
        <h2
          style={
            Object {
              "color": "#999",
              "display": "inline",
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with text
        </h2>
      </div>
    </div>
  </div>,
  <div
    id="story-root"
    style={Object {}}
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "hotpink",
          "border": "none",
          "borderRadius": 5,
          "color": "white",
          "display": "inline-block",
          "fontSize": "16px",
          "margin": "4px 2px",
          "padding": 20,
          "textAlign": "center",
          "textDecoration": "none",
        }
      }
    >
      Hello Button
    </button>
  </div>,
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "2",
          "padding": "0px 5px",
        }
      }
    >
      
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Prop Types
      </h1>
      <div>
        <h3
          style={
            Object {
              "margin": "20px 0 0 0",
            }
          }
        >
          "
          RoundedButton
          " Component
        </h3>
        <small>
          No propTypes defined!
        </small>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Welcome RoundedButton 1`] = `
Array [
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "2",
          "padding": "0px 5px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingBottom": 0,
            "paddingTop": 0,
          }
        }
      >
        <h1
          style={
            Object {
              "display": "inline",
              "fontSize": "25px",
              "margin": 0,
              "marginRight": "20px",
              "padding": 0,
            }
          }
        >
          Welcome
        </h1>
        <h2
          style={
            Object {
              "color": "#999",
              "display": "inline",
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          RoundedButton
        </h2>
      </div>
    </div>
  </div>,
  <div
    id="story-root"
    style={Object {}}
  >
    <article
      style={
        Object {
          "backgroundColor": "#fff",
          "color": "#000",
          "fontFamily": "\\"Helvetica Neue\\", Helvetica, \\"Segoe UI\\", Arial, freesans, sans-serif",
          "lineHeight": 1.4,
          "padding": 15,
        }
      }
    >
      <h1>
        Welcome to storybook
      </h1>
      <p>
        This is a UI component dev environment for your app.
      </p>
      <p>
        We've added some basic stories inside the 
        <code
          style={
            Object {
              "backgroundColor": "#f3f2f2",
              "border": "1px solid #eae9e9",
              "borderRadius": 4,
              "color": "#3a3a3a",
              "fontSize": 15,
              "fontWeight": 600,
              "padding": "2px 5px",
            }
          }
        >
          src/stories
        </code>
         directory.
        <br />
        A story is a single state of one or more UI components. You can have as many stories as you want.
        <br />
        (Basically a story is like a visual test case.)
      </p>
      <p>
        See these sample 
        <button
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "borderBottom": "1px solid #1474f3",
              "borderLeft": "none",
              "borderRight": "none",
              "borderTop": "none",
              "color": "#1474f3",
              "cursor": "pointer",
              "font": "inherit",
              "padding": 0,
              "paddingBottom": 2,
              "textDecoration": "none",
            }
          }
          type="button"
        >
          stories
        </button>
         for a component called 
        <code
          style={
            Object {
              "backgroundColor": "#f3f2f2",
              "border": "1px solid #eae9e9",
              "borderRadius": 4,
              "color": "#3a3a3a",
              "fontSize": 15,
              "fontWeight": 600,
              "padding": "2px 5px",
            }
          }
        >
          Button
        </code>
        .
      </p>
      <p>
        Just like that, you can add your own components as stories.
        <br />
        You can also edit those components and see changes right away.
        <br />
        (Try editing the 
        <code
          style={
            Object {
              "backgroundColor": "#f3f2f2",
              "border": "1px solid #eae9e9",
              "borderRadius": 4,
              "color": "#3a3a3a",
              "fontSize": 15,
              "fontWeight": 600,
              "padding": "2px 5px",
            }
          }
        >
          Button
        </code>
         stories located at 
        <code
          style={
            Object {
              "backgroundColor": "#f3f2f2",
              "border": "1px solid #eae9e9",
              "borderRadius": 4,
              "color": "#3a3a3a",
              "fontSize": 15,
              "fontWeight": 600,
              "padding": "2px 5px",
            }
          }
        >
          src/stories/1-Button.stories.js
        </code>
        .)
      </p>
      <p>
        Usually we create stories with smaller UI components in the app.
        <br />
        Have a look at the 
        <a
          href="https://storybook.js.org/basics/writing-stories"
          rel="noopener noreferrer"
          style={
            Object {
              "borderBottom": "1px solid #1474f3",
              "color": "#1474f3",
              "paddingBottom": 2,
              "textDecoration": "none",
            }
          }
          target="_blank"
        >
          Writing Stories
        </a>
         section in our documentation.
      </p>
      <p
        style={
          Object {
            "opacity": 0.5,
          }
        }
      >
        <b>
          NOTE:
        </b>
        <br />
        Have a look at the 
        <code
          style={
            Object {
              "backgroundColor": "#f3f2f2",
              "border": "1px solid #eae9e9",
              "borderRadius": 4,
              "color": "#3a3a3a",
              "fontSize": 15,
              "fontWeight": 600,
              "padding": "2px 5px",
            }
          }
        >
          .storybook/webpack.config.js
        </code>
         to add webpack loaders and plugins you are using in this project.
      </p>
    </article>
  </div>,
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "2",
          "padding": "0px 5px",
        }
      }
    >
      
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Prop Types
      </h1>
      <div>
        <h3
          style={
            Object {
              "margin": "20px 0 0 0",
            }
          }
        >
          "
          Welcome
          " Component
        </h3>
        <table
          className="info-table"
        >
          <thead>
            <tr>
              <th>
                property
              </th>
              <th>
                propType
              </th>
              <th>
                required
              </th>
              <th>
                default
              </th>
              <th>
                description
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                className="info-table-monospace"
              >
                showApp
              </td>
              <td
                className="info-table-monospace"
              >
                <span>
                  unknown
                </span>
              </td>
              <td
                className={null}
              >
                -
              </td>
              <td
                className={null}
              >
                <span>
                  null
                </span>
              </td>
              <td
                className={null}
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
]
`;
